sumo/tests/sumo/errors/network/junction/root__junction#type__ungiven2/errors.sumo
Error: Attribute 'type' in definition of junction '2' is empty.
Quitting (on error).
